add Agent RBAC mechanism
